IGNITE-28899 Calcite. Fix litmus error during join